# p25.rs

./: Cargo.toml
src/: buffer.rs  lib.rs
src/baseband/: sync.rs
src/coding/: bch.rs  reed_solomon.rs
